@@ -1,3 +1,7 @@
+* Revert to using `in` operator when resolving `:enabled` and `:disabled` dynamic pseudo classes on control elements. [Diego Perini]
+
+* Fix regression in `reSplitGroup` and allow escaped characters in `reSplitGroup`, `reSplitToken`, Patterns.attribute, and Patterns.dpseudos. [jddalton, pdanpdan]
+
 * Rename prop `CSS_ID` to `UID` and use native element.unqiueID if available. [jddalton]
 
 * Rewrite structural pseudo class resolver in the compiler to better match QSA behavior and results. [Diego Perini]
